<resources>
    <string name="app_name">ServiçoFácil</string>
    <string name="tab_1">Pesquisar</string>
    <string name="tab_2">Histórico</string>
    <string name="tab_3">Perfil</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">Main</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_search">Search</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_notificacao">Notificação</string>
    <string name="menu_entre_contato">Entre em contato</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_termos">Termos de Uso</string>
    <string name="menu_sair">Sair</string>
    <string name="text_servicos_fornece">Serviços que você fornece</string>
    <string name="btn_disponivel">Disponível</string>
    <string name="btn_indisponivel">Indisponível</string>
    <string name="text_fornece_nenhum_servico">Você não fonece nenhum serviço</string>
    <string name="btn_editar_perfil">Editar perfil</string>
    <string name="entrar">Entrar</string>
    <string name="esqueceu_senha">Esqueceu senha?</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="digite_seu_e_mail">Digite seu e-mail</string>
    <string name="digite_seu_nome_completo">Digite seu nome completo</string>
    <string name="digite_seu_cpf">Digite seu CPF</string>
    <string name="digite_seu_ano_de_nascimento">Digite seu ano de nascimento</string>
    <string name="dados_para_contato">Dados para contato</string>
    <string name="digite_seu_telefone">Digite seu telefone</string>
    <string name="senha">Senha</string>
    <string name="digite_sua_senha_novamente">Digite sua senha novamente</string>
    <string name="concordo_com">Concordo com</string>
    <string name="termos_de_uso">Termos de Uso</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="altera_senha">Informe o número ou e-mail cadastrado na sua conta para receber o link de alteração de senha</string>
    <string name="digite_seu_telefone_ou_e_mail">Digite seu telefone ou e-mail</string>
    <string name="recuperar_senha">Recuperar senha</string>
    <string name="mensagem_contato">Abaixo digite a mensagem que quer nos enviar, e clique no botão enviar</string>
    <string name="escreva_sua_mensagem_aqui">Escreva sua mensagem aqui</string>
    <string name="enviar">Enviar</string>
    <string name="termo">Legal  Este termo de uso e algo oficticio, nada real ainda, pois o aplicativo ainda esta em fase de desenvolvimento. SERVIÇOFÁCIL TECNOLOGIA LTDA.  TERMOS E CONDIÇÕES:  Última atualização: 06 de maio de 2018   1. RELACIONAMENTO CONTRATUAL Estes Termos de uso (“Termos”) regem seu acesso e uso, como pessoa física, dentro do Brasil, de aplicativos, sítios de Internet, conteúdos, bens e também serviços (os “Serviços”) disponibilizados pela ServiçoFácil do Brasil Tecnologia Ltda., sociedade de responsabilidade limitada, ainda sem localização pois é apenas um projeto ainda,   POR FAVOR, LEIA COM ATENÇÃO ESTES TERMOS ANTES DE ACESSAR OU USAR OS SERVIÇOS.   Ao acessar e usar os Serviços você concorda com os presentes termos e condições, que estabelecem o relacionamento contratual entre você e a ServiçoFácil. Se você não concorda com estes Termos, você não pode acessar nem usar os Serviços. Mediante referido acesso e uso, estes Termos imediatamente encerram, substituem e superam todos os acordos, Termos e acertos anteriores entre você e qualquer Afiliada da ServiçoFácil. A EasyService poderá imediatamente encerrar estes Termos ou quaisquer Serviços em relação a você ou, de modo geral, deixar de oferecer ou negar acesso aos Serviços ou a qualquer parte deles, a qualquer momento e por qualquer motivo. Termos adicionais poderão se aplicar a determinados Serviços, tais como condições para um evento, atividade ou promoção em particular, e esses Termos adicionais serão divulgados em relação aos respectivos Serviços. Termos adicionais são complementares e considerados parte integrante destes Termos para os efeitos dos respectivos Serviços. Termos adicionais prevalecerão sobre estes Termos em caso de conflito com relação aos referidos Serviços. A ServiçoFácil poderá alterar os Termos relativos aos Serviços a qualquer momento. Aditamentos entrarão em vigor quando a EasyService fizer a postagem da versão atualizada dos Termos neste local ou das condições atualizadas ou Termos adicionais sobre o respectivo Serviço. O fato de você continuar a acessar ou usar os Serviços após essa postagem representa seu consentimento em vincular-se aos Termos alterados. Nossa obtenção e uso de informações pessoais associadas aos Serviços está disciplinada na Declaração de Privacidade de Usuários da ServiçoFácil. A ServiçoFácil ou qualquer de suas afiliadas poderá fornecer a uma gerenciadora de reclamações ou seguradoras qualquer informação necessária (inclusive suas informações de contato) se houver qualquer reclamação, litígio ou conflito, o que pode incluir acidente envolvendo você ou Prestadores Terceiros (inclusive um(a) motorista de uma rede de empresas de transportes), e essas informações ou dados forem necessários para solucionar a reclamação, litígio ou conflito.   2. OS SERVIÇOS Os Serviços integram uma plataforma de tecnologia que permite aos(às) Usuários(as) de aplicativos móveis ou sítios de Internet da EasyService, fornecidos como parte dos Serviços (cada qual um “Aplicativo”), providenciar e programar Serviços de transporte e/ou logística e/ou compra de certos bens com terceiros provedores independentes desses Serviços, inclusive terceiros fornecedores independentes de transporte, terceiros fornecedores independentes de logística e terceiros fornecedores independentes de bens, mediante contrato com a EasyService ou determinadas Afiliadas da EasyService (“Prestadores Terceiros”). A menos que diversamente acordado pela EasyService em contrato escrito em separado firmado com você, os Serviços são disponibilizados para seu uso pessoal e não comercial. VOCÊ RECONHECE QUE A EasyService NÃO É FORNECEDORA DE BENS, NÃO PRESTA SERVIÇOS DE TRANSPORTE OU LOGÍSTICA, NEM FUNCIONA COMO TRANSPORTADORA, E QUE TODOS ESSES SERVIÇOS DE TRANSPORTE OU LOGÍSTICA SÃO PRESTADOS POR PRESTADORES TERCEIROS INDEPENDENTES QUE NÃO SÃO EMPREGADOS(AS) E NEM REPRESENTANTES DA EasyService, NEM DE QUALQUER DE SUAS AFILIADAS. LICENÇA. Sujeito ao cumprimento destes Termos, a EasyService outorga a você uma licença limitada, não exclusiva, não passível de sublicença, revogável e não transferível para: (i) acesso e uso dos Aplicativos em seu dispositivo pessoal, exclusivamente para o seu uso dos Serviços; e (ii) acesso e uso de qualquer conteúdo, informação e material correlato que possa ser disponibilizado por meio dos Serviços, em cada caso, para seu uso pessoal, nunca comercial. Quaisquer direitos não expressamente outorgados por estes Termos são reservados à EasyService e suas afiliadas licenciadoras. RESTRIÇÕES. Você não poderá: (i) remover qualquer aviso de direito autoral, direito de marca ou outro aviso de direito de propriedade de qualquer parte dos Serviços; (ii) reproduzir, modificar, preparar obras derivadas, distribuir, licenciar, locar, vender, revender, transferir, exibir, veicular, transmitir ou, de qualquer outro modo, explorar os Serviços, exceto da forma expressamente permitida pela EasyService; (iii) decompilar, realizar engenharia reversa ou desmontar os Serviços, exceto conforme permitido pela legislação aplicável; (iv) conectar, espelhar ou recortar qualquer parte dos Serviços; (v) fazer ou lançar quaisquer programas ou scripts com a finalidade de fazer scraping, indexação, pesquisa ou qualquer outra forma de obtenção de dados de qualquer parte dos Serviços, ou de sobrecarregar ou prejudicar indevidamente a operação e/ou funcionalidade de qualquer aspecto dos Serviços; ou (vi) tentar obter acesso não autorizado aos Serviços ou prejudicar qualquer aspecto dos Serviços ou seus sistemas ou redes correlatas. PRESTAÇÃO DOS SERVIÇOS. Além disto, Apple Inc., Google, Inc., Microsoft Corporation ou BlackBerry Limited e/ou suas subsidiárias e afiliadas internacionais serão terceiros(as) beneficiários(as) deste Contrato, caso você acesse os Serviços usando aplicativos desenvolvidos para dispositivos móveis baseados em Apple iOS, Android, Microsoft Windows, ou Blackberry, respectivamente. Esses(as) terceiros(as) beneficiários(as) não são partes deste Contrato e não são responsáveis pela prestação dos Serviços ou por qualquer forma de suporte aos Serviços. Seu acesso aos Serviços usando esses dispositivos está sujeito às condições estabelecidas nos termos de serviços dos respectivos terceiros(as) beneficiários(as). TITULARIDADE. Os Serviços e todos os direitos sobre eles são e permanecerão de propriedade da EasyService ou de propriedade das Afiliadas da EasyService, ou de suas respectivas licenciadoras, conforme o caso. Estes Termos e o uso dos Serviços não lhe outorgam nem lhe conferem qualquer direito: (i) sobre os Serviços, exceto pela licença limitada concedida acima; ou (ii) de usar ou, de qualquer modo, fazer referência a nomes societários, logotipos, nomes de produtos ou de Serviços, marcas comerciais ou marcas de serviço da EasyService ou de qualquer licenciadora da EasyService. 3. O USO DOS SERVIÇOS CONTAS DE USUÁRIOS. Para utilizar grande parte dos Serviços, você deve registrar-se e manter uma conta pessoal de usuário de Serviços (“Conta”). Você deve ter pelo menos 18 anos ou a maioridade exigida por lei em seu foro (se for diferente de 18 anos) para abrir uma Conta. Registro de Conta exige que você apresente à EasyService certas informações pessoais, tais como seu nome, endereço, número de telefone celular e idade, assim como pelo menos um método de pagamento válido (cartão de crédito ou parceiro de pagamento aceito). Você concorda em manter informações corretas, completas e atualizadas em sua Conta. Se você não mantiver informações corretas, completas e atualizadas em sua Conta, inclusive se o método de pagamento informado for inválido ou expirado, você poderá ficar impossibilitado(a) de acessar e usar os Serviços ou a EasyService poderá resolver estes Termos. Você é responsável por todas as atividades realizadas na sua Conta e concorda em manter sempre a segurança e o sigilo do nome de usuário e senha da sua Conta. A menos que diversamente permitido pela EasyService por escrito, você poderá manter apenas uma Conta. CONDUTA E OBRIGAÇÕES DO USUÁRIO. O Serviço não está disponível para uso para indivíduos menores de 18 anos. Você não poderá autorizar terceiros(as) a usar sua Conta, você não poderá permitir que pessoas menores de 18 anos recebam Serviços de transporte ou logística de Prestadores Terceiros, salvo se estiverem em sua companhia.</string>
    <string name="o_que">O que é?</string>
    <string name="sobre_easyservice">ServiçoFácil é um aplicativo para facilitar você a encontrar um serviço, de maneira rápida e fácil.</string>
    <string name="desenvoveldores">Desenvoveldores</string>
    <string name="nomes_desenvolvedores">Gabriel Castro - Raissa Menezes - Emerson Lima - Steffane Laila - Rogério Cézar</string>
    <string name="www_easyservice_com_br">www.servicofacil.com.br</string>
    <string name="easyservice_email_com_br">servicofacil@email.com.br</string>
    <string name="vers_o_1_0_06_18">Versão 1.0.06.18</string>
    <string name="conversas">Conversas</string>
    <string name="notificacoes">Notificações</string>
    <string name="sainda_da_conta">Saindo na conta</string>
    <string name="deseja_sair_da_conta">Tem certeza que deseja sair da sua conta?</string>
    <string name="sim">Sim</string>
</resources>