<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/relativeLayout"
    android:background="@android:color/holo_blue_dark"
    tools:context="bill.servicofacil.Telas.EntreEmContato">

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:text="@string/mensagem_contato"
        android:textSize="14sp"
        android:gravity="top"/>

    <EditText
        android:id="@+id/description"
        android:background="@drawable/bordas_arredondadas"
        android:hint="@string/escreva_sua_mensagem_aqui"
        android:inputType="textShortMessage|textMultiLine"
        android:maxLines="20"
        android:layout_width="match_parent"
        android:layout_height="237dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:scrollHorizontally="false"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/btn_enviar_mensagem"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/botao_cinza"
        android:layout_gravity="bottom"
        android:text="@string/enviar"/>

</LinearLayout>

