<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutCadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context="bill.servicofacil.Telas.TabCadastro.CadastroServidor"
    tools:layout_editor_absoluteY="81dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/rcadastroLayout_servidor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/rfotoUser_servidor"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/user" />

            <EditText
                android:id="@+id/rNome_servidor"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bordas_arredondadas"
                android:drawableLeft="@drawable/baseline_perm_identity_black_18dp"
                android:ems="10"
                android:hint="@string/digite_seu_nome_completo"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Gabriel"
                android:textCursorDrawable="@drawable/cursor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.888"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/rCpf_servidor"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bordas_arredondadas"
                android:drawableLeft="@drawable/baseline_fingerprint_black_18dp"
                android:ems="10"
                android:hint="@string/digite_seu_cpf"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="12040283305"
                android:textCursorDrawable="@drawable/cursor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.881"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nome" />

            <EditText
                android:id="@+id/rNascimento_servidor"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bordas_arredondadas"
                android:drawableLeft="@drawable/baseline_calendar_today_black_18dp"
                android:ems="10"
                android:hint="@string/digite_seu_ano_de_nascimento"
                android:inputType="number"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="1854"
                android:textCursorDrawable="@drawable/cursor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.888"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rg"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/rtextViewDados_servidor"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="8dp"
                android:background="#69b3ec"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/dados_para_contato"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nascimento"
                app:layout_constraintVertical_bias="0.112"
                />

            <EditText
                android:id="@+id/rNumero_servidor"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bordas_arredondadas"
                android:drawableLeft="@drawable/baseline_local_phone_black_18dp"
                android:ems="10"
                android:hint="@string/digite_seu_telefone"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="7188889999"
                android:textCursorDrawable="@drawable/cursor"
                app:layout_constraintBottom_toTopOf="@+id/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.048"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <EditText
                android:id="@+id/rEmail_servidor"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bordas_arredondadas"
                android:drawableLeft="@drawable/baseline_email_black_18dp"
                android:ems="10"
                android:hint="@string/digite_seu_e_mail"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="abs@gmail.com"
                android:textCursorDrawable="@drawable/cursor"
                app:layout_constraintBottom_toTopOf="@+id/textView16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/numero"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                app:layout_constraintVertical_bias="0.666" />

            <TextView
                android:id="@+id/rtextView16_servidor"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="8dp"
                android:background="#69b3ec"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/senha"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.662" />

            <EditText
                android:id="@+id/rSenha_servidor"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bordas_arredondadas"
                android:drawableLeft="@drawable/baseline_lock_black_18dp"
                android:ems="10"
                android:hint="@string/digite_sua_senha"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="123456"
                android:textCursorDrawable="@drawable/cursor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

            <EditText
                android:id="@+id/rConfSenha_servidor"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bordas_arredondadas"
                android:drawableLeft="@drawable/baseline_lock_black_18dp"
                android:ems="10"
                android:hint="@string/digite_sua_senha_novamente"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="123456"
                android:textCursorDrawable="@drawable/cursor"
                app:layout_constraintBaseline_toBaselineOf="@+id/senha"
                app:layout_constraintEnd_toEndOf="parent" />

            <CheckBox
                android:id="@+id/rtermos_servidor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/concordo_com"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.881" />

            <TextView
                android:id="@+id/rtermosUso_servidor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="163dp"
                android:layout_marginTop="-34dp"
                android:text="@string/termos_de_uso"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/rbtnCadastrar_servidor"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/botao_cinza"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/cadastrar"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.982"
                tools:ignore="DuplicateIds" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
